--- a/apps/templates/home.html
+++ b/apps/templates/home.html
@@ -14,7 +14,11 @@
         <div id="home-content">
             <h1>Medicine Dose Tracker - Get Started!</h1>
             <hr>
-            <a class="btn btn-light btn-lg" href="javascript:void(0)" role="button">Get Started !</a>
+            {% if request.user.is_authenticated %}
+              <a class="btn btn-light btn-lg" href="{% url 'medicines:list' %}" role="button">Get Started !</a>
+            {% else %}
+              <a class="btn btn-light btn-lg" href="{% url 'users:login' %}?next={% url 'medicines:list' %}" role="button">Get Started !</a>
+            {% endif %}
         </div>
     </div>
   </div>
